--- a/mysite/home/templates/index.html
+++ b/mysite/home/templates/index.html
@@ -59,7 +59,7 @@
 
 <footer>
     <p>
-        Pelo jeito ela tá querendo AHHWNNN
+        Pelo jeito ela tá querendo nada
     </p>
 </footer>
 </body>
