--- a/mysite/home/templates/home/index.html
+++ b/mysite/home/templates/home/index.html
@@ -4,7 +4,7 @@
     <title>Página de login</title>
     <meta charset="utf-8">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'login_page/style.css' %}">
+    <link rel="stylesheet" href="{% static 'home/style.css' %}">
 </head>
 <body>
 <h2>Página de login vinculada ao dbsqlite</h2>
